WIP: video_recorder save videos better dealing with framerate fluctuations

--- a/image_view/CMakeLists.txt
+++ b/image_view/CMakeLists.txt
@@ -4,6 +4,8 @@ project(image_view)
 find_package(catkin REQUIRED COMPONENTS camera_calibration_parsers cv_bridge dynamic_reconfigure image_transport message_filters message_generation nodelet rosconsole roscpp std_srvs stereo_msgs)
 generate_dynamic_reconfigure_options(cfg/ImageView.cfg)
 
+add_compile_options(-std=c++11)
+
 catkin_package(CATKIN_DEPENDS dynamic_reconfigure)
 find_package(Boost REQUIRED COMPONENTS thread)
 find_package(OpenCV REQUIRED)
